--- a/src/public/styles/accountingDay.css
+++ b/src/public/styles/accountingDay.css
@@ -1,9 +1,30 @@
 .cell{
     border: 1px solid black;
-    width: 40px;
+    width: 90px;
     padding: 5px;
 }
 
 .accountColumn{
     text-align: center;
+}
+
+.show-grid [class*=col-] {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #eee;
+    background-color: rgba(86,61,124,.15);
+    border: 1px solid #ddd;
+    border: 1px solid rgba(86,61,124,.2);
+}
+
+.overlay-input{
+    position: absolute;
+    /*top:0px;*/
+    /*left: 0px;*/
+    /*padding-top: 10px;*/
+    /*padding-bottom: 10px;*/
+    padding: 10px 5px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border: 1px solid rgba(86,61,124,.2);
 }
