--- a/src/public/main.css
+++ b/src/public/main.css
@@ -1,2 +1,2 @@
-@import './styles/bootstrap.min.css';
+@import 'https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css';
 @import './styles/accountingDay.css';
