--- a/src/public/main.css
+++ b/src/public/main.css
@@ -1,2 +1,3 @@
 @import 'https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css';
 @import './styles/accountingDay.css';
+@import "./styles/message.css";
