--- a/src/public/main.css
+++ b/src/public/main.css
@@ -1,3 +1,4 @@
 @import 'https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css';
 @import './styles/accountingDay.css';
 @import "./styles/message.css";
+@import "./styles/monthlyTotals.css";
