--- a/src/public/main.css
+++ b/src/public/main.css
@@ -2,3 +2,26 @@
 @import './styles/accountingDay.css';
 @import "./styles/message.css";
 @import "./styles/monthlyTotals.css";
+
+.statement-period-table-day:hover {
+    color: #727272;
+    background-color: #bdbdbd;
+    border-color: #959595;
+    cursor: pointer;
+}
+.statement-period-table-edit:hover{
+    color: #333;
+    background-color: #e6e6e6;
+    border-color: #adadad;
+    cursor: pointer;
+}
+
+.statement-period-table-day-selected{
+    color: #727272;
+    background-color: #e6e6e6;
+    border-color: #adadad;
+
+    /*-webkit-box-shadow: 1px 2px 8px 1px rgba(91,201,235,1);*/
+    /*-moz-box-shadow: 1px 2px 8px 1px rgba(91,201,235,1);*/
+    /*box-shadow: 1px 2px 8px 1px rgba(91,201,235,1);*/
+}
